# client

./: Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
shared/: Cargo.toml
shared/schemas/: action_request.schema.json  action_response.schema.json  auth_request.schema.json  auth_response.schema.json  delete_request.schema.json  error_response.schema.json  save_changeset.schema.json  screen_contract.schema.json  validate_response.schema.json
shared/src/: lib.rs
src/: app.rs  date_parse.rs  formula.rs  http.rs  main.rs  number_format.rs  runtime.rs  shortcuts.rs  theme.rs  time_parse.rs  token_store.rs
src/ui/: layout_profile.rs  mod.rs
src/ui/screens/: card.rs  grid.rs  list.rs  mod.rs  server_menu.rs
src/ui/widgets/: bottom_bar.rs  grid.rs  mod.rs  modal.rs  table.rs
src/ui/widgets/field/: mod.rs  option_dropdown.rs  render.rs
