[package]
name = "two_wee_client"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
regex = "1"
cli-clipboard = "0.4"
crossterm = "0.28"
dirs = "5"
ratatui = "0.28"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
two_wee_shared = { path = "../shared" }
nucleo-matcher = "0.3.1"
