[workspace]
members = [".", "shared"]
resolver = "2"

[package]
name = "two_wee_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "two_wee_client"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
regex = "1"
cli-clipboard = "0.4"
crossterm = "0.28"
portable-pty = "0.8"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
two_wee_shared = { path = "shared" }
